Agregado de Boton cambio de idioma html, css e imagenes

--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
 	        	<li><a href="#portfolio">Portfolio</a></li>
 	        	<li><a href="#contact">Contact</a></li>
 	        </ul>
+			<div class="cont-button-idioma">
+				<div class="button-flags">
+					<div id="flagA" class="side-flag front-flag" aria-label="Español">
+						<img src="img/flag-arg.png" alt="Español"/>
+					</div>
+					<div id="flagB" class="side-flag back-flag" aria-label="Inglés">
+						<img src="img/flag-ing.png" alt="Ingles"/>
+					</div>
+				</div>
+			</div>
 		</nav>
 	</header>
 	<div class="main">
