Agregado de lad b saludo, falta testear funcionamiento

--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
 	        	<li><a href="#skills">Skills</a></li>
 	        	<li><a href="#portfolio">Portfolio</a></li>
 	        	<li><a href="#contact">Contact</a></li>
-	        </ul>
-			<div class="cont-button-idioma">
-				<div class="button-flags">
-					<div id="flagA" class="side-flag front-flag" aria-label="Español">
-						<img src="img/flag-arg.png" alt="Español"/>
-					</div>
-					<div id="flagB" class="side-flag back-flag" aria-label="Inglés">
-						<img src="img/flag-ing.png" alt="Ingles"/>
+				<div class="cont-button-languague">
+					<div class="button-flags">
+						<div id="flagA" class="side-flag front-flag" aria-label="Español">
+							<img src="img/flag-arg.png" alt="Español"/>
+						</div>
+						<div id="flagB" class="side-flag back-flag" aria-label="Inglés">
+							<img src="img/flag-ing.png" alt="Ingles"/>
+						</div>
 					</div>
 				</div>
-			</div>
+	        </ul>
 		</nav>
 	</header>
 	<div class="main">
@@ -60,7 +60,14 @@
 					<!-- <img src="./img/pablo-garay-picture.jpg" alt="pablo garay picture"> -->
 				</div>
 				<div class="home-info">
-					<h1>Hi<span>!</span><br>I'm <span>Pablo </span>Garay</h1>
+					<div class="home-info-greeting">
+						<div id="greeting" class="side-greeting">
+							<h1>Hi<span>!</span><br>I'm <span>Pablo </span>Garay</h1>
+						</div>
+						<div id="greeting" class="side-greeting back-greeting">
+							<h1><span>¡</span>Hola<span>!</span><br>Soy<span>Pablo </span>Garay</h1>
+						</div>
+					</div>
 					<h4 class="home-subtitle">Web Developer</h4>
 					<button class="home-download-resume">
 						<a target="_blank" href="./pdf/pablo-garay-resume.pdf">Download Resume</a>
