--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
 			<a href="#" class="brand">
 				<h2><span>P</span>G</h2>
 			</a>
+			<div class="cont-button-languague">
+				<div class="button-flags">
+					<div id="flagC" class="side-flag front-flag" aria-label="Español">
+						<img src="img/flag-arg.png" alt="Español"/>
+					</div>
+					<div id="flagD" class="side-flag back-flag" aria-label="Inglés">
+						<img src="img/flag-ing.png" alt="Ingles"/>
+					</div>
+				</div>
+			</div>			
 			<button class="open-menu" aria-label="Abrir menú">
 				<!--<i class="fa-solid fa-bars"></i>-->
 				<img src="img/hamburger-icon.svg" alt="abrir menú" />
@@ -49,53 +59,118 @@
 						</div>
 					</div>
 				</div>
-	        </ul>
+	        </ul>			
 		</nav>
 	</header>
 	<div class="main">
 		<div class="horizontal-padding vertical-padding">
 			<section class="home" id="home">
 				<div class="home-img">
-					<img src="./img/picture.png" alt="pablo garay picture">
-					<!-- <img src="./img/pablo-garay-picture.jpg" alt="pablo garay picture"> -->
+					<div class="home-img-box">
+						<div class="home-img-box-side">
+							<img src="./img/picture.png" alt="pablo garay picture">
+						</div>
+						<div class="home-img-box-side home-img-box-side-back">
+							<img src="./img/picture.png" alt="pablo garay picture">
+						</div>	
+					</div>
 				</div>
 				<div class="home-info">
 					<div class="home-info-greeting">
-						<div id="greeting" class="side-greeting">
-							<h1>Hi<span>!</span><br>I'm <span>Pablo </span>Garay</h1>
-						</div>
-						<div id="greeting" class="side-greeting back-greeting">
-							<h1><span>¡</span>Hola<span>!</span><br>Soy<span>Pablo </span>Garay</h1>
+						<div class="home-info-greeting-box">
+							<div class="home-info-greeting-box-side">
+								<h1>Hi<span>!</span><br></h1>
+							</div>
+							<div class="home-info-greeting-box-side home-info-greeting-box-side-back"> 
+								<h1><span>¡</span>Hola<span>!</span><br></h1>
+							</div>
+						</div>	
+					</div>
+					<div class="home-info-name">
+						<div class="home-info-name-box">
+							<div class="home-info-name-box-side">
+								<h1>I'm <span>Pablo </span>Garay</h1>
+							</div>
+							<div class="home-info-name-box-side home-info-name-box-side-back"> 
+								<h1>Soy <span>Pablo </span>Garay</h1>
+							</div>
 						</div>
 					</div>
-					<h4 class="home-subtitle">Web Developer</h4>
-					<button class="home-download-resume">
-						<a target="_blank" href="./pdf/pablo-garay-resume.pdf">Download Resume</a>
-					</button>					
+					<div class="home-info-subtitle">
+						<div class="home-info-subtitle-box">
+							<div class="home-info-subtitle-box-side home-info-subtitle-box-side-front">
+								<h4>Web Developer</h4>
+							</div>
+							<div class="home-info-subtitle-box-side home-info-subtitle-box-side-back">
+								<h4>Desarrollador Web</h4>
+							</div>
+						</div>
+					</div>
+					<div class="home-info-download">
+						<div class="home-info-download-box">
+							<div class="home-info-download-box-side home-info-download-box-side-front">
+								<a target="_blank" href="./pdf/pablo-garay-resume.pdf">Download Resume</a>
+							</div>
+							<div class="home-info-download-box-side home-info-download-box-side-back">
+								<a target="_blank" href="./pdf/cv-pablo-garay.pdf">Descargar CV</a>
+							</div>
+						</div>
+					</div>					
 				</div>
 			</section><!--end section home-->
 		</div><!--end horizontal/vertical padding-->
 		<section class="about" id="aboutme">
 			<div class="horizontal-padding vertical-padding">
 				<div class="about-title">
-					<h2 class="uppercase">About me</h2>
-					<div class="about-divider"></div>
+					<div class="about-title-box">
+						<div class="about-title-box-side">
+							<h2 class="uppercase">About me</h2>
+							<div class="about-divider"></div>
+						</div>
+						<div class="about-title-box-side about-title-box-side-back">
+							<h2 class="uppercase">Sobre mi</h2>
+							<div class="about-divider"></div>
+						</div>
+					</div>
 				</div>
 				<div class="about-content">
 					<div class="about-content-info">
-						<h3>Who I am?</h3>
-						<p>
-							I am a proactive person, I can quickly adapt to changes. I like what I do and I really want to learn, that's why I continue training myself day by day in a self-taught way to grow as a professional. 
-						</p>
-						<p>
-							I have communication and empathy skills to work in a team. Now I am looking for the opportunity to join a technology company, although at the moment I work autonomously.
-						</p>						
+						<div class="about-content-info-who-box">
+							<div class="about-content-info-who-box-side about-content-info-who-box-side-front">
+								<h3>Who I am?</h3>
+							</div>
+							<div class="about-content-info-who-box-side about-content-info-who-box-side-back">
+								<h3>¿Qui&eacute;n soy?</h3>
+							</div>
+						</div>
+						<div class="about-content-info-who-text-box">
+							<div class="about-content-info-who-text-box-side">
+								<p>I am a proactive person, I can quickly adapt to changes. I like what I do and I really want to learn, that's why I continue training myself day by day in a self-taught way to grow as a professional.</p>
+								<p>I have communication and empathy skills to work in a team. Now I am looking for the opportunity to join a technology company, although at the moment I work autonomously.</p>
+							</div>
+							<div class="about-content-info-who-text-box-side about-content-info-who-text-box-side-back">
+								<p>Soy una persona proactiva, me adapto rapidamente a los cambios. Me gusta lo que hago y me gusta aprender, por eso que estoy continuamente capacitandome d&iacute;a a d&iacute;a de manera autodidacta para crecer como profesional.</p>
+								<p>Tengo habilidades de comunicaci&oacute;n y empat&iacute;a para trabajar en equipo. Ahora estoy buscando la oportunidad de ingresar a una empresa de tecnolog&iacute;a, aunque por el momento trabajo de mandera aut&oacute;noma.</p>
+							</div>
+						</div>	
 					</div>				
 					<div class="about-content-details">
-						<h3>My Hobbies</h3>
-						<p>
-							I like outdoor sports, especially soccer, although the important thing is to get together with friends. Photography, meeting new places and people.
-						</p>
+						<div class="about-content-details-hobbies-box">
+							<div class="about-content-details-hobbies-box-side about-content-details-hobbies-box-side-front">
+								<h3>My Hobbies</h3>
+							</div>
+							<div class="about-content-details-hobbies-box-side about-content-details-hobbies-box-side-back">
+								<h3>Mis Pasatiempos</h3>
+							</div>
+						</div>
+						<div class="about-content-details-hobbies-text-box">
+							<div class="about-content-details-hobbies-text-box-side">
+								<p>I like outdoor sports, especially soccer, although the important thing is to get together with friends. Photography, meeting new places and people.</p>
+							</div>
+							<div class="about-content-details-hobbies-text-box-side about-content-details-hobbies-text-box-side-back">
+								<p>Me gustan los deportes al aire libre, en especial el f&uacute;tbol, aunque lo importante es juntarse con amigos. La fotograf&iacute;a, conocer personas y lugares nuevos.</p>
+							</div>
+						</div>	
 					</div>
 				</div>
 			</div><!--end horizontal/vertical padding-->
@@ -103,8 +178,16 @@
 		<div class="horizontal-padding vertical-padding">
 			<section class="skills" id="skills">
 				<div class="skills-content-title">
-					<h2 class="uppercase">Skills & Tools</h2>
-					<div class="skills-divider"></div>
+					<div class="skills-content-title-box">
+						<div class="skills-content-title-box-side skills-content-title-box-side-front">
+							<h2 class="uppercase">Skills & Tools</h2>
+							<div class="skills-divider"></div>
+						</div>
+						<div class="skills-content-title-box-side skills-content-title-box-side-back">
+							<h2 class="uppercase">Habilidades y Herramientas</h2>
+							<div class="skills-divider"></div>
+						</div>	
+					</div>
 				</div>
 				<ul class="skills-list">
 					<li>Linux</li>
@@ -126,8 +209,16 @@
 		<section class="portfolio" id="portfolio">
 			<div class="horizontal-padding vertical-padding">
 				<div class="portfolio-content-title">
-					<h2 class="uppercase">Portfolio</h2>
-					<div class="portfolio-divider"></div>
+					<div class="portfolio-content-title-box">
+						<div class="portfolio-content-title-box-side">
+							<h2 class="uppercase">Portfolio</h2>
+							<div class="portfolio-divider"></div>
+						</div>
+						<div class="portfolio-content-title-box-side portfolio-content-title-box-side-back">
+							<h2 class="uppercase">Portafolio</h2>
+							<div class="portfolio-divider"></div>
+						</div>
+					</div>
 				</div>
 				<div class="center-950">
 				<div class="porfolio-container-cards">
@@ -240,8 +331,16 @@
 		<section class="contact" id="contact">
 			<div class="horizontal-padding vertical-padding">
 				<div class="contact-content-title">
-					<h2 class="uppercase">Contact</h2>
-					<div class="contact-divider"></div>
+					<div class="contact-content-title-box">
+						<div class="contact-content-title-box-side">
+							<h2 class="uppercase">Contact</h2>
+							<div class="contact-divider"></div>
+						</div>
+						<div class="contact-content-title-box-side contact-content-title-box-side-back">
+							<h2 class="uppercase">Contacto</h2>
+							<div class="contact-divider"></div>
+						</div>
+					</div>
 				</div>
 				<form name="contact_form" id="contact_form" action="php/contact-form.php" method="post" onsubmit="return validar();">
 					<div class="contact-group">
