Animacion portfolio finalizada

--- a/index.html
+++ b/index.html
@@ -221,111 +221,256 @@
 					</div>
 				</div>
 				<div class="center-950">
-				<div class="porfolio-container-cards">
-					<div class="portfolio-card">
-						<a href="https://www.your-project-web-site.com" target="_blank">
-							<div class="portfolio-card-img">
-								<img src="img/portfolio-proyects.png" alt="crud mvc">
+					<div class="portfolio-container-cards">
+						
+						<div class="portfolio-container-cards-box1">
+							<div class="portfolio-container-cards-box-side1">
+								<div class="portfolio-card">
+									<a href="https://www.your-project-web-site.com" target="_blank">
+										<div class="portfolio-card-img">
+											<img src="img/portfolio-proyects.png" alt="crud mvc">
+										</div>
+									</a>
+									<h4 class="portfolio-card-title">BLOG</h4>
+									<p>Description of your project. technologies and tools used for development. <br>Lorem ipsum dolor sit amet consectetur adipiscing elit quis, ullamcorper metus.</p>
+									<div class="portfolio-card-links">							
+										<a href="https://github.com" target="_blank">
+											<i class="fa-brands fa-github"></i>
+										</a>
+										<a href="https://www.your-project-web-site.com" target="_blank">
+											<i class="fa fa-globe-americas"></i>
+										</a>
+									</div>
+								</div><!--end portfolio card 1 front-->
 							</div>
-						</a>
-						<h4 class="portfolio-card-title">BLOG</h4>
-						<p>Description of your project. technologies and tools used for development. <br>Lorem ipsum dolor sit amet consectetur adipiscing elit quis, ullamcorper metus.</p>
-						<div class="portfolio-card-links">							
-							<a href="https://github.com" target="_blank">
-								<i class="fa-brands fa-github"></i>
-							</a>
-							<a href="https://www.your-project-web-site.com" target="_blank">
-								<i class="fa fa-globe-americas"></i>
-							</a>
-						</div>
-					</div><!--end portfolio card 1-->
-					<div class="portfolio-card">
-						<a href="https://www.your-project-web-site.com" target="_blank">
-							<div class="portfolio-card-img">
-								<img src="img/portfolio-proyects.png" alt="crud mvc">
+							<div class="portfolio-container-cards-box-side1 portfolio-container-cards-box-side-back1">
+								<div class="portfolio-card">
+									<a href="https://www.your-project-web-site.com" target="_blank">
+										<div class="portfolio-card-img">
+											<img src="img/portfolio-proyects.png" alt="crud mvc">
+										</div>
+									</a>
+									<h4 class="portfolio-card-title">BLOG Back</h4>
+									<p>Descripcion de tu proyecto. Tecnologias y herramientas usadas para el desarrollo. <br>Lorem ipsum dolor sit amet consectetur adipiscing elit quis, ullamcorper metus.</p>
+									<div class="portfolio-card-links">							
+										<a href="https://github.com" target="_blank">
+											<i class="fa-brands fa-github"></i>
+										</a>
+										<a href="https://www.your-project-web-site.com" target="_blank">
+											<i class="fa fa-globe-americas"></i>
+										</a>
+									</div>
+								</div><!--end portfolio card 1 back-->
 							</div>
-						</a>
-						<h4 class="portfolio-card-title">CRUD MVC</h4>
-						<p>Description of your project. technologies and tools used for development. <br>Lorem ipsum dolor sit amet consectetur adipiscing elit quis, ullamcorper metus.</p>
-						<div class="portfolio-card-links">							
-							<a href="https://github.com" target="_blank">
-								<i class="fa-brands fa-github"></i>
-							</a>
-							<a href="https://www.your-project-web-site.com" target="_blank">
-								<i class="fa fa-globe-americas"></i>
-							</a>
-						</div>
-					</div><!--end portfolio card 2-->
-					<div class="portfolio-card">
-						<a href="https://www.your-project-web-site.com" target="_blank">
-							<div class="portfolio-card-img">
-								<img src="img/portfolio-proyects.png" alt="web site wordpress">
+						</div><!--end portfolio container cards box card 1-->
+
+						<div class="portfolio-container-cards-box2">
+							<div class="portfolio-container-cards-box-side2">
+								<div class="portfolio-card">
+									<a href="https://www.your-project-web-site.com" target="_blank">
+										<div class="portfolio-card-img">
+											<img src="img/portfolio-proyects.png" alt="crud mvc">
+										</div>
+									</a>
+									<h4 class="portfolio-card-title">CRUD MVC</h4>
+									<p>Description of your project. technologies and tools used for development. <br>Lorem ipsum dolor sit amet consectetur adipiscing elit quis, ullamcorper metus.</p>
+									<div class="portfolio-card-links">							
+										<a href="https://github.com" target="_blank">
+											<i class="fa-brands fa-github"></i>
+										</a>
+										<a href="https://www.your-project-web-site.com" target="_blank">
+											<i class="fa fa-globe-americas"></i>
+										</a>
+									</div>
+								</div><!--end portfolio card 2 front-->
 							</div>
-						</a>
-						<h4 class="portfolio-card-title">E-commerce WordPress</h4>
-						<p>Description of your project. technologies and tools used for development. <br>Lorem ipsum dolor sit amet consectetur adipiscing elit quis, ullamcorper metus.</p>
-						<div class="portfolio-card-links">							
-							<a href="https://github.com" target="_blank">
-								<i class="fa-brands fa-github"></i>
-							</a>
-							<a href="https://www.your-project-web-site.com" target="_blank">
-								<i class="fa fa-globe-americas"></i>
-							</a>
-						</div>
-					</div><!--end portfolio card 3-->
-					<div class="portfolio-card">
-						<a href="https://www.your-project-web-site.com" target="_blank">
-							<div class="portfolio-card-img ">
-								<img src="img/portfolio-proyects.png" alt="contact form">
+							<div class="portfolio-container-cards-box-side2 portfolio-container-cards-box-side-back2">
+								<div class="portfolio-card">
+									<a href="https://www.your-project-web-site.com" target="_blank">
+										<div class="portfolio-card-img">
+											<img src="img/portfolio-proyects.png" alt="crud mvc">
+										</div>
+									</a>
+									<h4 class="portfolio-card-title">CRUD MVC Back</h4>
+									<p>Descripcion de tu proyecto. Tecnologias y herramientas usadas para el desarrollo. <br>Lorem ipsum dolor sit amet consectetur adipiscing elit quis, ullamcorper metus.</p>
+									<div class="portfolio-card-links">							
+										<a href="https://github.com" target="_blank">
+											<i class="fa-brands fa-github"></i>
+										</a>
+										<a href="https://www.your-project-web-site.com" target="_blank">
+											<i class="fa fa-globe-americas"></i>
+										</a>
+									</div>
+								</div><!--end portfolio card 2 back-->
 							</div>
-						</a>
-						<h4 class="portfolio-card-title">Contact Form</h4>
-						<p>Description of your project. technologies and tools used for development. <br>Lorem ipsum dolor sit amet consectetur adipiscing elit quis, ullamcorper metus.</p>
-						<div class="portfolio-card-links">							
-							<a href="https://github.com" target="_blank">
-								<i class="fa-brands fa-github"></i>
-							</a>
-							<a href="https://www.your-project-web-site.com" target="_blank">
-								<i class="fa fa-globe-americas"></i>
-							</a>
-						</div>
-					</div><!--end portfolio card 4-->
-					<div class="portfolio-card">
-						<a href="https://www.your-project-web-site.com" target="_blank">
-							<div class="portfolio-card-img">
-								<img src="img/portfolio-proyects.png" alt="web site">
+						</div><!--end portfolio container cards box card 2-->
+
+						<div class="portfolio-container-cards-box3">
+							<div class="portfolio-container-cards-box-side3">
+								<div class="portfolio-card">
+									<a href="https://www.your-project-web-site.com" target="_blank">
+										<div class="portfolio-card-img">
+											<img src="img/portfolio-proyects.png" alt="web site wordpress">
+										</div>
+									</a>
+									<h4 class="portfolio-card-title">E-commerce WordPress</h4>
+									<p>Description of your project. technologies and tools used for development. <br>Lorem ipsum dolor sit amet consectetur adipiscing elit quis, ullamcorper metus.</p>
+									<div class="portfolio-card-links">							
+										<a href="https://github.com" target="_blank">
+											<i class="fa-brands fa-github"></i>
+										</a>
+										<a href="https://www.your-project-web-site.com" target="_blank">
+											<i class="fa fa-globe-americas"></i>
+										</a>
+									</div>
+								</div><!--end portfolio card 3 front-->
 							</div>
-						</a>
-						<h4 class="portfolio-card-title">Web Site Portfolio</h4>
-						<p>Description of your project. technologies and tools used for development. <br>Lorem ipsum dolor sit amet consectetur adipiscing elit quis, ullamcorper metus.</p>
-						<div class="portfolio-card-links">							
-							<a href="https://github.com" target="_blank">
-								<i class="fa-brands fa-github"></i>
-							</a>
-							<a href="https://www.your-project-web-site.com" target="_blank">
-								<i class="fa fa-globe-americas"></i>
-							</a>
-						</div>
-					</div><!--end portfolio card 5-->
-					<div class="portfolio-card">
-						<a href="https://www.your-project-web-site.com" target="_blank">
-							<div class="portfolio-card-img">
-								<img src="img/portfolio-proyects.png" alt="contact form">
+							<div class="portfolio-container-cards-box-side3 portfolio-container-cards-box-side-back3">
+								<div class="portfolio-card">
+									<a href="https://www.your-project-web-site.com" target="_blank">
+										<div class="portfolio-card-img">
+											<img src="img/portfolio-proyects.png" alt="web site wordpress">
+										</div>
+									</a>
+									<h4 class="portfolio-card-title">E-commerce WP Back</h4>
+									<p>Descripcion de tu proyecto. Tecnologias y herramientas usadas para el desarrollo. <br>Lorem ipsum dolor sit amet consectetur adipiscing elit quis, ullamcorper metus.</p>
+									<div class="portfolio-card-links">							
+										<a href="https://github.com" target="_blank">
+											<i class="fa-brands fa-github"></i>
+										</a>
+										<a href="https://www.your-project-web-site.com" target="_blank">
+											<i class="fa fa-globe-americas"></i>
+										</a>
+									</div>
+								</div><!--end portfolio card 3 back-->
 							</div>
-						</a>
-						<h4 class="portfolio-card-title">Contact Form</h4>
-						<p>Description of your project. technologies and tools used for development. <br>Lorem ipsum dolor sit amet consectetur adipiscing elit quis, ullamcorper metus.</p>
-						<div class="portfolio-card-links">							
-							<a href="https://github.com" target="_blank">
-								<i class="fa-brands fa-github"></i>
-							</a>
-							<a href="https://www.your-project-web-site.com" target="_blank">
-								<i class="fa fa-globe-americas"></i>
-							</a>
-						</div>
-					</div><!--end portfolio card 6-->
-				</div><!--end porfolio-container-cards-->
-			</div>
+						</div><!--end portfolio container cards box card 3-->
+
+						<div class="portfolio-container-cards-box4">
+							<div class="portfolio-container-cards-box-side4">
+								<div class="portfolio-card">
+									<a href="https://www.your-project-web-site.com" target="_blank">
+										<div class="portfolio-card-img ">
+											<img src="img/portfolio-proyects.png" alt="contact form">
+										</div>
+									</a>
+									<h4 class="portfolio-card-title">Contact Form</h4>
+									<p>Description of your project. technologies and tools used for development. <br>Lorem ipsum dolor sit amet consectetur adipiscing elit quis, ullamcorper metus.</p>
+									<div class="portfolio-card-links">							
+										<a href="https://github.com" target="_blank">
+											<i class="fa-brands fa-github"></i>
+										</a>
+										<a href="https://www.your-project-web-site.com" target="_blank">
+											<i class="fa fa-globe-americas"></i>
+										</a>
+									</div>
+								</div><!--end portfolio card 4 front-->
+							</div>
+							<div class="portfolio-container-cards-box-side4 portfolio-container-cards-box-side-back4">
+								<div class="portfolio-card">
+									<a href="https://www.your-project-web-site.com" target="_blank">
+										<div class="portfolio-card-img ">
+											<img src="img/portfolio-proyects.png" alt="contact form">
+										</div>
+									</a>
+									<h4 class="portfolio-card-title">Formulario Contacto Back</h4>
+									<p>Descripcion de tu proyecto. Tecnologias y herramientas usadas para el desarrollo. <br>Lorem ipsum dolor sit amet consectetur adipiscing elit quis, ullamcorper metus.</p>
+									<div class="portfolio-card-links">							
+										<a href="https://github.com" target="_blank">
+											<i class="fa-brands fa-github"></i>
+										</a>
+										<a href="https://www.your-project-web-site.com" target="_blank">
+											<i class="fa fa-globe-americas"></i>
+										</a>
+									</div>
+								</div><!--end portfolio card 4 back-->
+							</div>
+						</div><!--end portfolio container cards box card 4-->
+
+						<div class="portfolio-container-cards-box5">
+							<div class="portfolio-container-cards-box-side5">
+								<div class="portfolio-card">
+									<a href="https://www.your-project-web-site.com" target="_blank">
+										<div class="portfolio-card-img">
+											<img src="img/portfolio-proyects.png" alt="web site">
+										</div>
+									</a>
+									<h4 class="portfolio-card-title">Web Site Portfolio</h4>
+									<p>Description of your project. technologies and tools used for development. <br>Lorem ipsum dolor sit amet consectetur adipiscing elit quis, ullamcorper metus.</p>
+									<div class="portfolio-card-links">							
+										<a href="https://github.com" target="_blank">
+											<i class="fa-brands fa-github"></i>
+										</a>
+										<a href="https://www.your-project-web-site.com" target="_blank">
+											<i class="fa fa-globe-americas"></i>
+										</a>
+									</div>
+								</div><!--end portfolio card 5 front-->
+							</div>
+							<div class="portfolio-container-cards-box-side5 portfolio-container-cards-box-side-back5">
+								<div class="portfolio-card">
+									<a href="https://www.your-project-web-site.com" target="_blank">
+										<div class="portfolio-card-img">
+											<img src="img/portfolio-proyects.png" alt="web site">
+										</div>
+									</a>
+									<h4 class="portfolio-card-title">Portafolio Sitio Web Back</h4>
+									<p>Descripcion de tu proyecto. Tecnologias y herramientas usadas para el desarrollo. <br>Lorem ipsum dolor sit amet consectetur adipiscing elit quis, ullamcorper metus.</p>
+									<div class="portfolio-card-links">							
+										<a href="https://github.com" target="_blank">
+											<i class="fa-brands fa-github"></i>
+										</a>
+										<a href="https://www.your-project-web-site.com" target="_blank">
+											<i class="fa fa-globe-americas"></i>
+										</a>
+									</div>
+								</div><!--end portfolio card 5 back-->
+							</div>
+						</div><!--end portfolio container cards box card 5-->
+
+						<div class="portfolio-container-cards-box6">
+							<div class="portfolio-container-cards-box-side6">
+								<div class="portfolio-card">
+									<a href="https://www.your-project-web-site.com" target="_blank">
+										<div class="portfolio-card-img">
+											<img src="img/portfolio-proyects.png" alt="contact form">
+										</div>
+									</a>
+									<h4 class="portfolio-card-title">API REST</h4>
+									<p>Description of your project. technologies and tools used for development. <br>Lorem ipsum dolor sit amet consectetur adipiscing elit quis, ullamcorper metus.</p>
+									<div class="portfolio-card-links">							
+										<a href="https://github.com" target="_blank">
+											<i class="fa-brands fa-github"></i>
+										</a>
+										<a href="https://www.your-project-web-site.com" target="_blank">
+											<i class="fa fa-globe-americas"></i>
+										</a>
+									</div>
+								</div><!--end portfolio card front6-->
+							</div>
+							<div class="portfolio-container-cards-box-side6 portfolio-container-cards-box-side-back6">
+								<div class="portfolio-card">
+									<a href="https://www.your-project-web-site.com" target="_blank">
+										<div class="portfolio-card-img">
+											<img src="img/portfolio-proyects.png" alt="contact form">
+										</div>
+									</a>
+									<h4 class="portfolio-card-title">API REST Back</h4>
+									<p>Descripcion de tu proyecto. Tecnologias y herramientas usadas para el desarrollo. <br>Lorem ipsum dolor sit amet consectetur adipiscing elit quis, ullamcorper metus.</p>
+									<div class="portfolio-card-links">							
+										<a href="https://github.com" target="_blank">
+											<i class="fa-brands fa-github"></i>
+										</a>
+										<a href="https://www.your-project-web-site.com" target="_blank">
+											<i class="fa fa-globe-americas"></i>
+										</a>
+									</div>
+								</div><!--end portfolio card back6-->
+							</div>
+						</div><!--end portfolio container cards box card 6-->
+
+					</div><!--end porfolio-container-cards-->
+				</div><!--end center-950-->
 			</div><!--end horizontal/vertical padding-->
 		</section><!--end section portfolio-->
 		<section class="contact" id="contact">
